--- a/about.html
+++ b/about.html
@@ -1,1 +1,14 @@
-I like to derp all over the place
+---
+layout: layout
+---
+<div class="sites">
+  <span class="twitter-link">
+    <a href="https://twitter.com/PatSlat4" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @PatSlat4</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  </span>
+  <span class="github-link">
+    <a id="github" href="https://github.com/patslat">
+      <img src="/images/GitHub-Mark-32px.png">
+    </a>
+  </span>
+</div>
